--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,43 @@
 # Ignore CI build directory
 build/
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# VS2015 Files
+*.opendb
+*.sdf
+.vs/
+*.tlog
+*.log
+*.ilk
+*.pdb
+*.idb
+ipch/
+*.vc.db
